unpackaged/main/default/objects/Account/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard Rock</fullName>
            </value>
            <value>
                <fullName>Seminole Hard Rock</fullName>
            </value>
            <value>
                <fullName>Seminole</fullName>
            </value>
            <value>
                <fullName>Rock Shop</fullName>
            </value>
            <value>
                <fullName>Reverb</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>