unpackaged/main/default/objects/Account/fields/Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Business_Line__c</fullName>
    <label>Business Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loyalty Marketing</fullName>
            </value>
            <value>
                <fullName>Loyalty Digital</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Hospitality Hotel/Spa</fullName>
            </value>
            <value>
                <fullName>Hospitality Food and Beverages</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Casino Slots</fullName>
            </value>
            <value>
                <fullName>Casino Tables</fullName>
            </value>
            <value>
                <fullName>Casino Poker/Bingo</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>