unpackaged/main/default/objects/Account/fields/Established__c.field-meta.xml
<CustomField>
    <fullName>Established__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Established</label>
    <type>Date</type>
</CustomField>