unpackaged/main/default/objects/Account/fields/Fax_Extension__c.field-meta.xml
<CustomField>
    <fullName>Fax_Extension__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax Extension</label>
    <length>18</length>
    <type>Text</type>
</CustomField>