unpackaged/main/default/objects/Account/fields/Location_Number__c.field-meta.xml
<CustomField>
    <fullName>Location_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>