unpackaged/main/default/objects/Account/fields/MSD_External_Id__c.field-meta.xml
<CustomField>
    <fullName>MSD_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>MSD External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>