unpackaged/main/default/objects/Account/fields/Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Extension__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Extension</label>
    <length>18</length>
    <type>Text</type>
</CustomField>