unpackaged/main/default/objects/Account/fields/Primary_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Primary_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Affiliation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>