unpackaged/main/default/objects/Account/fields/System_Email__c.field-meta.xml
<CustomField>
    <fullName>System_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System Email</label>
    <type>Email</type>
</CustomField>