unpackaged/main/default/objects/Account/fields/SystemContactId__c.field-meta.xml
<CustomField>
    <fullName>SystemContactId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SystemContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>