unpackaged/main/default/objects/Account/recordTypes/Customer_Guest_Account.recordType-meta.xml
<RecordType>
    <fullName>Customer_Guest_Account</fullName>
    <active>true</active>
    <description>Represents the individual accounts of customer and guest</description>
    <label>Customer &amp; Guest Account</label>
</RecordType>