unpackaged/main/default/objects/Account/recordTypes/Franchise_Managed_Account.recordType-meta.xml
<RecordType>
    <fullName>Franchise_Managed_Account</fullName>
    <active>true</active>
    <description>Represents the franchises and managed locations</description>
    <label>Franchise &amp; Managed Location Account</label>
</RecordType>