unpackaged/main/default/objects/Account/validationRules/Location_is_Required_When_Franchise_Ma.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_is_Required_When_Franchise_Ma</fullName>
    <active>true</active>
    <description>When record type is Franchise &amp; Managed Location then Location number will be required.</description>
    <errorConditionFormula>RecordType.DeveloperName =&#39;Franchise_Managed_Account&#39; &amp;&amp;
 ISBLANK(Location_Number__c  )</errorConditionFormula>
    <errorDisplayField>Location_Number__c</errorDisplayField>
    <errorMessage>Location number can not be blank.</errorMessage>
</ValidationRule>