unpackaged/main/default/objects/Account/listViews/Customer_Guest_Accounts.listView-meta.xml
<ListView>
    <fullName>Customer_Guest_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer_Guest_Account</value>
    </filters>
    <label>Customer/Guest Accounts</label>
    <sharedTo>
        <role>Sr_Product_Manager</role>
    </sharedTo>
</ListView>