unpackaged/main/default/objects/Account/listViews/Franchise_Accounts.listView-meta.xml
<ListView>
    <fullName>Franchise_Accounts</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Location_Number__c</columns>
    <columns>Territory__c</columns>
    <columns>Business_Line__c</columns>
    <columns>Brand__c</columns>
    <columns>Active_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Franchise_Managed_Account</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Cafe: Franchise,Hotel: Franchise,Casino: Franchise</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Casino Hotel: Franchise,Rock Shop: Franchise,Hard Rock Live: Franchise</value>
    </filters>
    <label>Franchise Accounts</label>
</ListView>